--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 
 body {
     margin: 0;
-    font-family: system-ui;
+    font-family: "Libertinus Sans";
     background-color: #1e1e2f;
     color: #f0f0f0;
     scroll-behavior: smooth;
