--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ header {
     z-index: 1000;
 }
 
-h1 {
+header h1 {
     font-size: 2rem;
     color: #00ffe7;
     margin: 0;
@@ -46,13 +46,39 @@ nav ul li a:hover {
     color: #00ffe7;
 }
 
+.slider{
+    width: 100%;
+    height: 80%;
+    aspect-ratio: 16/9;
+    background-color: #232424;
+    position:relative;
+
+}
+
+.slider-background {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+}
+
+.slider-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #ffffff;
+}
+
+
 .section {
     padding: 4rem 2rem;
     max-width: 900px;
     margin: auto;
 }
 
-h2 {
+section h2 {
     font-size: 1.8rem;
     color: #00ffe7;
     margin-bottom: 1rem;
